public abstract class Employee {


    public double calculateSalary() {
    return 0;
    }
}
