public class MonthlyEmployee extends Employee{

    private double salary;

    public MonthlyEmployee(double salary) {
        this.salary = salary;
    }

    public double calculateSalary() {
    return salary;
    }

}
